--- a/res/stylesheets/test-menu-widget-stats-button.qss
+++ b/res/stylesheets/test-menu-widget-stats-button.qss
@@ -1,15 +1,15 @@
 QPushButton {
     border: none;
     background: transparent;
-    icon: url("./assets/icons/stats-normal.png");
+    icon: url("./res/icons/stats-normal.png");
     icon-size: 48px;
 }
 
 QPushButton::hover {
-    icon: url("./assets/icons/stats-hover.png");
+    icon: url("./res/icons/stats-hover.png");
 }
 
 
 QPushButton::pressed {
-    icon: url("./assets/icons/stats-select.png");
+    icon: url("./res/icons/stats-select.png");
 }
